--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Musabbir's Resume</title>https://github.com/RxvxntxN/Resume/blob/main/index.html
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/RxvxntxN/Resume/raw/main/musabbirCV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://docs.google.com/gview?url=github.com/RxvxntxN/Resume/raw/main/musabbirCV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
